src/test/ui/type-alias-enum-variants.stderr
error[E0109]: type parameters are not allowed on this type
  --> $DIR/type-alias-enum-variants.rs:9:27
   |
LL |     let _ = Alias::None::<u8>; // Error
   |                           ^^ type parameter not allowed

error: aborting due to previous error

For more information about this error, try `rustc --explain E0109`.
